# open-data-lakehouse-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
assets/: .pre-commit-config.yaml  clean.sh  pyproject.toml
assets/code/: solution_lakehouse_part1_load_data.ipynb  starter_lakehouse_part1_load_data.ipynb  (+3 more)
buses-dashboard/: package-lock.json  package.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data-journey/: .gcloudignore  Dockerfile  main.py  pyproject.toml
data-journey/notebooks/: helpers.py  part0-prepare-data.py  part1-load-data.py  part2-spark-processing.py  part3-time-series-forecasting.py
data-journey/notebooks/__marimo__/session/: helpers.py.json  part0-prepare-data.py.json  part1-load-data.py.json  part2-spark-processing.py.json  start.py.json  utils.py.json
dev-utils/: clean-notebooks.py  docker-compose.yaml
notebooks/: lakehouse_part0_data_generation.ipynb  lakehouse_part1_load_data.ipynb  lakehouse_part2_time_series_forecasting.ipynb
notebooks_and_code/: No-terraform-minimal-Setup.ipynb  No_terraform_minimal_Setup.ipynb  lakehouse_part0_data_generation.ipynb  lakehouse_part0_data_generation.py  lakehouse_part1_load_data.ipynb  lakehouse_part1_load_data.py  lakehouse_part2_spark_processing.ipynb  lakehouse_part2_spark_processing.py  lakehouse_part3_time_series_forecasting.ipynb  lakehouse_part3_time_series_forecasting.py  pyproject.toml  pyspark-job.py  run-pyspark.sh  solution_lakehouse_part1_load_data.ipynb  solution_lakehouse_part2_spark_processing.ipynb  solution_lakehouse_part3_time_series_forecasting.ipynb  starter_lakehouse_part1_load_data.ipynb  starter_lakehouse_part2_spark_processing.ipynb  starter_lakehouse_part3_time_series_forecasting.ipynb
src/: Dockerfile  app.py  pyproject.toml
src/notebooks/: lakehouse_part0_data_generation.py  lakehouse_part1_load_data.py
src/open_data_lakehouse_demo/: bq_service.py  clean-notebooks.py  kafka_service.py  main.py  pyspark_service.py  token_provider.py  utils.py
src/open_data_lakehouse_demo/marimo-notebooks/: lakehouse_part0_data_generation.py  lakehouse_part1_load_data.py
src/open_data_lakehouse_demo/static/css/: style.css
src/open_data_lakehouse_demo/templates/: base.html  index.html
terraform/: bq.tf  build.tf  cloudrun.tf  gcs.tf  kafka.tf  main.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
webapp/: package-lock.json  pyproject.toml
(+80 files in other folders)
