[project]
name = "open-data-lakehouse-demo"
version = "0.1.0"
description = "This webapp will walk through some setup and guidelines on building your own data lakehouse, based on open source technologies to enable multi-platform data lakehouse architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "db-dtypes>=1.4.3",
    "duckdb>=1.3.0",
    "google-cloud-aiplatform>=1.94.0",
    "google-cloud-bigquery>=3.33.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-managedkafka>=0.1.11",
    "google-cloud-storage>=2.19.0",
    "marimo>=0.13.13",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars[pyarrow]>=1.30.0",
    "ruff>=0.11.11",
    "sodapy>=2.2.0",
    "sqlglot>=26.22.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]
